# YOLO-study

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_CONTEXT.md  custom_data.yaml  pyproject.toml
00_basics/: 01_opencv_basics.py  02_pytorch_basics.py  03_pytorch_vs_yolo.py  04_loss_visualization.py  05_parameter_monitor.py  06_camera_yolo.py  07_training_loop.py  08_cifar10_classifier.py  08_mytestforcnn.py  09_mytest2.py  09_train_val_predict.py  09_truning_test1.py  09_tuning_experiments.py  10_error_analysis.py  10_nms_demo.py  11_video_detection_skipframe.py  12_bytetrack_tracking.py  cnn_visual.html  full_pipeline_save_load.py  optimizer_visual.html
01_helmet_detect/: 01_train.py  02_predict.py  03_val.py  04_custom_render.py  05_pro_render.py  06_test1.py  auto_import.py  custom_data.yaml  split_data.py
02_export_deploy/: 01_export.py  02_onnx_inference.py  03_multpratice.py  04_onnx_video_inference.py  05_video.py  06_save_video.py  07_onnx_video_homework.py
03_practice_yolo/: 01_mytest.py  01_train_save_load.py  02_error_analysis.py  02_errottest.py  03_mytest.py  03_nms_demo.py  04_mytest.py  04_onnx_export_infer.py  05_mytest.py  05_video_skipframe.py  05_video_skipframe_async.py  06_bytetrack.py  06_bytetrack_v2.py  06_mytest.py
04_practice_pytorch/: 01_mytest.py  01_train_save_load.py  02_mytest.py  02_train_validate.py  03_mytest.py  03_nms_from_scratch.py  04_mytest.py  04_onnx_export.py  05_feature_map_visualize.py  05_mytest.py  06_mytest.py  06_optimizer_compare.py
notes/: complete_project_workflow.md  current_status.md  next_steps.md  (+6 more)
(+55 files in other folders)
